# wordlefilegenerator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_extract_page_count_from_listesdemots_html.py  test_extract_words_from_listesdemots_html.py  test_parse_html.py  test_perform_get_request.py  test_scrap_listesdemots.py
tests/data/: allmots4lettres.txt  mots4lettrespage1.html  mots4lettrespage2.html  mots4lettrespage3.html  mots4lettrespage4.html  mots4lettrespage5.html  mots6lettrespage1.html  mots6lettrespage1.txt  mots8lettrespage1.html  mots8lettrespage1.txt
wordlefilegenerator/: wordlefilegenerator.py
